# BravissBlog

./: .coverage  .flake8  db.sqlite3  manage.py  pyproject.toml
BravissBlog/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_employee_balance.py  0003_employee_avatar.py  0004_alter_employee_avatar.py
blog/: admin.py  constants.py  forms.py  mixins.py  models.py  sitemaps.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_image.py  0003_article_type.py
blog/templatetags/: social_share.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/uk/LC_MESSAGES/: django.mo  django.po
static/css/: style.css
templates/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  article_raise.html  base.html  base_2.html  breadcrumbs.html  home.html  login.html  password_reset_form.html  payment.html  post_to_telegram.html  registration.html  user_profile.html
